--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -24,9 +24,15 @@
               "src/assets"
             ],
             "styles": [
+              "../ClientApp/node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "../ClientApp/node_modules/jquery/dist/jquery.min.js",
+              "../ClientApp/node_modules/popper.js/dist/umd/popper.min.js",
+              "../ClientApp/node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "../ClientApp/node_modules/chart.js/dist/Chart.min.js"
+            ]
           },
           "configurations": {
             "production": {
